--- a/playbook.yml
+++ b/playbook.yml
@@ -10,12 +10,12 @@
 
     - name: Pull Docker image from Docker Hub
       docker_image:
-        name: "marwanalanani/python-app-image:latest"
+        name: "marwanalanani/python-app-image"
         source: pull
 
     - name: Run Docker container
       docker_container:
         name: weather-app
-        image: "marwanalanani/python-app-image:latest"
+        image: "marwanalanani/python-app-image"
         state: started
         restart_policy: always
