--- a/playbook.yml
+++ b/playbook.yml
@@ -9,13 +9,13 @@
         state: present
 
     - name: Pull Docker image from Docker Hub
-      docker_image:
-        name: "marwanalanani/python-app-image"
+      community.docker.docker_image:
+        name: "marwanalanani/python-app-image:latest"
         source: pull
 
     - name: Run Docker container
-      docker_container:
+      community.docker.docker_container:
         name: weather-app
-        image: "marwanalanani/python-app-image"
+        image: "marwanalanani/python-app-image:latest"
         state: started
         restart_policy: always
