--- a/playbook.yml
+++ b/playbook.yml
@@ -10,8 +10,9 @@
     - name: Install plugins
       command: dnf -y install dnf-plugins-core
 
-    - name: Add Docker repository
+    - name: Add docker repository
       command: dnf config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+
     - name: Install Docker
       dnf:
         name:
