--- a/playbook.yml
+++ b/playbook.yml
@@ -39,3 +39,5 @@
         image: "marwanalanani/python-app-image:latest"
         state: started
         restart_policy: always
+        published_ports:
+          - "5000:5000"
